[package]
name = "hyper-server"
version = "0.1.0"
edition = "2021"
authors = ["Jiyuan Su <jiyuan0125@126.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { git = "http://github.com/jiyuan0125/hyper", branch = "arceos" }

axstd = { path = "../../../ulib/axstd", features = [ "net", "multitask" ] }
