[package]
name = "rosrust-publisher-node"
version = "0.1.0"
edition = "2021"
authors = ["SuJiyuan <jiyuan0125@126.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlrpc = { version = "0.15.1", default-features = false, features = ["http"] }

# Only for selection of std features
axstd = { path = "../../../ulib/axstd", features = ["net", "multitask"]}
