[package]
name = "rosrust-publisher-node"
version = "0.1.0"
edition = "2021"
authors = ["Jiyuan Su <jiyuan0125@126.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = { git = "https://github.com/jiyuan0125/rosrust.git", rev = "ab948d418731f145738a7692b7850cae9761b65a"}
rosrust_msg = { git = "https://github.com/jiyuan0125/rosrust.git", rev = "ab948d418731f145738a7692b7850cae9761b65a"}

axstd = { path = "../../../ulib/axstd", features = ["net", "multitask"] }
