[package]
name = "rosrust-subscriber-node"
version = "0.1.0"
edition = "2021"
authors = ["Jiyuan Su <jiyuan0125@126.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = { git = "https://github.com/jiyuan0125/rosrust.git", branch = "arceos"}
rosrust_msg = { git = "https://github.com/jiyuan0125/rosrust.git", branch = "arceos"}

axstd = { path = "../../../ulib/axstd", features = ["net", "multitask"] }
