[package]
name = "tiny-server"
version = "0.1.0"
edition = "2021"
authors = ["Jiyuan Su <jiyuan0125@126.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = { git = "http://github.com/jiyuan0125/tiny-http", branch = "for-arceos2" }
serde = "1"
serde_derive = "1"

axstd = { path = "../../../ulib/axstd", features = [ "net", "multitask" ] }
