[package]
name = "xml-rpc-arceos-server"
version = "0.1.0"
edition = "2021"
authors = ["Jiyuan Su <jiyuan0125@126.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rpc-arceos = { path = "/home/baru/Work/GitHub/xml-rpc-arceos" }
anyhow = "1"

axstd = { path = "../../../ulib/axstd", features = [ "net", "multitask" ] }
